--- a/aca-sound-map/map_style.css
+++ b/aca-sound-map/map_style.css
@@ -7,14 +7,163 @@ body {
 
 p {
     font-size: 15px;
-    color: #FFD700;
+    color: white;
     font-family: 'Source Code Pro', 'Courier New', 'Lucida Sans Typewriter', monospace;
     line-height: 0px;
     text-align: left;
     position: absolute;
     left: 30px;
-    bottom: 20px;
+    bottom: 0px;
 }
+
+
+.marker {
+    background-image: url('aca-sound-map/logo.jpg');
+    background-size: cover;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+.sidebar {
+  min-height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 200;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  font-size: 17px;
+  color: white;
+  font-family: 'NewsGothic', 'Source Code Pro', 'Courier New', 'Lucida Sans Typewriter', monospace;
+  line-height: 20px;
+  text-align: left;
+}
+
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  font-size: 56px;
+  margin-left: auto;
+  z-index:200;
+}
+
+ .sidebar-content{ 
+    position: absolute;
+    top: 5%;
+    width: 60%;
+    left: 15%;
+    height:100%;
+}
+
+@media only screen and (min-width: 1000px) {
+    .openbtn {
+      display:none;
+    }
+    
+    img {
+        position: absolute;
+        top:30px;
+        right:4%;
+        width: 100%;
+        z-index:300;
+        max-height: 300px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .openbtn {
+      position: absolute !important;
+      right: 20px;
+      font-size: 20px;
+      cursor: pointer;
+      background-color: transparent;
+      margin: 15px;
+      color: white;
+      border: none;
+      z-index: 100;
+      width: 100px;
+      display:block;
+    }
+    
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        z-index:300;
+        max-height: 400px;
+    }
+    
+    p{
+        position: absolute;
+        font-size: 17px;
+        color: white;
+        font-family: 'NewsGothic', 'Source Code Pro', 'Courier New', 'Lucida Sans Typewriter', monospace;
+        line-height: 20px;
+        text-align: center;
+        width:100%;
+        top: 25%;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    content{ 
+        position: absolute;
+        right: 3%;
+        top: 0;
+        width: 20%; 
+     }
+
+    p {
+        position: absolute;
+        font-size: 17px;
+        color: white;
+        font-family: 'NewsGothic', 'Source Code Pro', 'Courier New', 'Lucida Sans Typewriter', monospace;
+        line-height: 20px;
+        text-align: left;
+        /*position: absolute;*/
+        right: 5%;
+        top: 350px;
+        width: 80%;
+    }
+    
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+    }
+}
+
+
+@media only screen and (max-width: 1000px) {
+content{ 
+    display: none !important;
+ }
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0%;
+      width: 100%;
+    }
+}
+
 
 
     #map {
