--- a/acasoundscapemap/map_style.css
+++ b/acasoundscapemap/map_style.css
@@ -18,7 +18,7 @@ p {
 
 
 .marker {
-    background-image: url('aca-sound-map/logo.jpg');
+    background-image: url('acasoundscapemap/logo.jpg');
     background-size: cover;
     width: 38px;
     height: 38px;
