--- a/acasoundscape-assets/map_style.css
+++ b/acasoundscape-assets/map_style.css
@@ -18,7 +18,7 @@ p {
 
 
 .marker {
-    background-image: url('acasoundscape-map/logo.jpg');
+    background-image: url('acasoundscape-assets/logo.jpg');
     background-size: cover;
     width: 38px;
     height: 38px;
