geolocate and new marker

--- a/acasoundscape-assets/map_style.css
+++ b/acasoundscape-assets/map_style.css
@@ -308,3 +308,8 @@ audio{
 .controls button:hover, .controls button:focus {
    color: #FFD700;
 }
+
+.mapboxgl-ctrl-top-right {
+    top: 0;
+    left: 0 !important;
+}
